network/unifi/unifi-redirect-fix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: unifi-redirect-fix
  namespace: unifi
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Host: "unifi.waushop.ee"
      X-Forwarded-Port: "443"
    customResponseHeaders:
      X-Forwarded-Proto: "https"
