network/unifi/unifi-tcp-routes.yaml
# TCP route for controller communication (SSL passthrough)
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: unifi-controller-tcp
  namespace: unifi
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`unifi.waushop.ee`)
    services:
    - name: unifi-ingress
      port: 8443
  tls:
    passthrough: true
    secretName: unifi-tls
---
# Note: UDP STUN service will continue using the existing LoadBalancer
# as UDP routing through ingress is complex and not needed for basic SSL
